Fix word spacing in Japanese cover headings

--- a/source/css/_cover.sass
+++ b/source/css/_cover.sass
@@ -14,6 +14,9 @@
     margin: 0
     padding: 0
 
+    &:lang(ja)
+      white-space: nowrap
+
   +screen-tall
     position: fixed
     top: $nav-height
